# IndividualProjects

Assignment1/: CMakeLists.txt  README.txt  file1.txt  main.cpp
Assignment2/: CMakeLists.txt  README.txt  barrier.c  fork-join.c  rendezvous.c
